--- a/src/AppBundle/Resources/views/Search/card.html.twig
+++ b/src/AppBundle/Resources/views/Search/card.html.twig
@@ -1,4 +1,4 @@
-<p class="background-{{ faction_code }}-20"
+<p class="fg-{{ faction_code }}"
 	style="padding: 3px 5px; border-radius: 3px; border: 1px solid silver">
 	<button type="button" class="close" aria-hidden="true" onclick="$(this).parent('p').remove()">&times;</button>
 	<input type="hidden" name="cards[]" value="{{ code }}">{{ name }}
