--- a/src/AppBundle/Resources/views/Search/display-zoom.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-zoom.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle:Search:display.html.twig' %}
 
-{% block javascript %}
-<script src="{{ asset('/bundles/thronesdbcards/js/reviews.js') }}"></script>
+{% block javascripts %}
+<script src="{{ asset('/bundles/app/js/ui.reviews.js') }}"></script>
 <script type="text/javascript">
 app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
 </script>
@@ -53,7 +53,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
         	   {% if card.reviews|length %}
         	   {% for review in card.reviews %}
         	   <article class="review" data-code="{{ review.id }}" id="review-{{ review.id }}">
-        	   
+
         	       <div class="review-like">
         	           <a id="review-social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom" title="Like that review">
                     	   <span class="fa fa-heart"></span> <span class="num">{{ review.nb_votes }}</span>
@@ -71,9 +71,9 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
             	       {% if review.author_donation > 0 %}<span class="fa fa-gift donator" title="thronesdb Gracious Donator"></span>{% endif %}
                 	   <small class="reputation">{{ review.author_reputation }}</small>
             	   </div>
-            	   
+
             	   {% if review.comments|length %}
-            	   
+
             	   {% for comment in review.comments %}
             	   <div class="review-comment text-muted small">{{ comment.text }}
             	   &mdash;
@@ -82,7 +82,7 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
                	   <time datetime="{{ comment.date_creation|date('c') }}" title="{{ comment.date_creation|date('F jS, Y') }}">{{ comment.date_creation|date('n/j/y') }}</time>
                 </div>
             	   {% endfor %}
-            	   
+
             	   {% endif %}
             	   <form action="{{ path('card_reviewcomment_post') }}" method="POST" class="form-comment">
             	   <input type="hidden" name="comment_review_id" value="{{ review.id }}">
@@ -109,4 +109,3 @@ app.user.params.card_id = {{ cards[0].id|json_encode|raw }};
 </div>
 
 {% endblock %}
-
