force data reload if database is older than 10 days

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
           <a class="navbar-brand" href="{{ path('index') }}">
             <span class="icon icon-link-half-top"></span>
             <span class="icon icon-link-half-bottom"></span>
-            ThronesDB
+            <span class="icon icon-power"></span> ThronesDB
           </a>
         </div>
         <div class="navbar-collapse collapse">
