fix search form, fix #1

--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -116,16 +116,6 @@
 		</div>
 	</div>
     <div class="col-sm-4">
-        <div class="form-group">
-			<label for="d">Limited</label>
-			<div>
-				<select class="form-control" name="d" id="d">
-					<option value="">any</option>
-					<option value="1">Yes</option>
-					<option value="0">No</option>
-				</select>
-			</div>
-		</div>
     </div>
     <div class="col-sm-4">
         <div class="form-group">
@@ -216,10 +206,10 @@
 			<label for="s">Strength</label>
 			<div class="row">
                 <div class="col-xs-4">
-                    <select name="po" id="po" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+                    <select name="so" id="so" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
                 <div class="col-xs-8">
-                    <input id="p" name="p" value="" class="form-control">
+                    <input id="s" name="s" value="" class="form-control">
                 </div>
 			</div>
 		</div>
