--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -84,7 +84,8 @@ $(function () {
 
 <tr>
 <td class="decklist-faction-image hidden-xs">
-	<img src="/bundles/app/images/factions/{{ decklist.faction_code }}.png" class="card img-responsive">
+	<img src="/bundles/app/images/factions/{{ decklist.faction_code }}.png">
+	<img src="/bundles/cards/{{ decklist.agenda_code }}.png">
 </td>
 <td>
     <article>
