--- a/src/AppBundle/Resources/views/Search/card-faction.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-faction.html.twig
@@ -1,4 +1,4 @@
 <span class="card-faction">
 {{ card.faction_name }}</span>.
-{% if card.isLoyal %} Loyal.{% endif %}
+{% if card.is_loyal %} Loyal.{% endif %}
 </span>
