--- a/src/AppBundle/Resources/views/Search/card-props.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-props.html.twig
@@ -5,15 +5,15 @@
 {% endif %}
 {% if card.type_code == 'character' %}
 	STR: {{ macros.integer_or_x(card.strength) }}.
-	{% if card.isMilitary %}<span class="color-military icon-military" title="Military"></span>{% endif %}
-	{% if card.isIntrigue %}<span class="color-intrigue icon-intrigue" title="Intrigue"></span>{% endif %}
-	{% if card.isPower %}<span class="color-power icon-power" title="Power"></span>{% endif %}
+	{% if card.is_military %}<span class="color-military icon-military" title="Military"></span>{% endif %}
+	{% if card.is_intrigue %}<span class="color-intrigue icon-intrigue" title="Intrigue"></span>{% endif %}
+	{% if card.is_power %}<span class="color-power icon-power" title="Power"></span>{% endif %}
 {% endif %}
 {% if card.type_code == 'plot' %}
 	Income: {{ macros.integer_or_x(card.income) }}.
 	Initiative: {{ macros.integer_or_x(card.initiative) }}.
 	Claim: {{ macros.integer_or_x(card.claim) }}.
 	Reserve: {{ macros.integer_or_x(card.reserve) }}.
-	Plot deck limit: {{ macros.integer_or_x(card.plotLimit) }}.
+	Plot deck limit: {{ macros.integer_or_x(card.plot_limit) }}.
 {% endif %}
 </span>
