--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -1,16 +1,16 @@
 @font-face {
-	font-family: 'agot2-font';
-	src:url('../fonts/agot2-font.eot?-cih4mt');
-	src:url('../fonts/agot2-font.eot?#iefix-cih4mt') format('embedded-opentype'),
-		url('../fonts/agot2-font.ttf?-cih4mt') format('truetype'),
-		url('../fonts/agot2-font.woff?-cih4mt') format('woff'),
-		url('../fonts/agot2-font.svg?-cih4mt#agot2') format('svg');
+	font-family: 'thronesdb';
+	src:url('../fonts/thronesdb.eot?irjt2b');
+	src:url('../fonts/thronesdb.eot?#iefixirjt2b') format('embedded-opentype'),
+		url('../fonts/thronesdb.ttf?irjt2b') format('truetype'),
+		url('../fonts/thronesdb.woff?irjt2b') format('woff'),
+		url('../fonts/thronesdb.svg?irjt2b#thronesdb') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-	font-family: 'agot2-font';
+	font-family: 'thronesdb';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -21,19 +21,6 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-}
-
-.icon-bg:before {
-	width: 100%;
-	height: 100%;
-	font-size: 5em;
-	text-align: center;
-	display: block;
-	position: absolute;
-	line-height:4em;
-	left: 0;
-	opacity: 0.2;
-  z-index: -1;
 }
 
 .icon-baratheon:before {
@@ -75,9 +62,6 @@
 .icon-plot:before {
 	content: "\e60c";
 }
-.icon-attachment:before {
-	content: "\e60d";
-}
 .icon-location:before {
 	content: "\e60e";
 }
@@ -89,6 +73,9 @@
 }
 .icon-agenda:before {
 	content: "\e611";
+}
+.icon-attachment:before {
+	content: "\e60d";
 }
 .icon-neutral:before {
 	content: "\e612";
