changed the color of Lannister

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -272,7 +272,7 @@ div.site-slogan {
 	background-color: #1d7893;
 }
 .bg-lannister {
-	background-color: #f02618;
+	background-color: #f04a18;
 }
 .bg-tyrell {
 	background-color: #509f16;
@@ -300,7 +300,7 @@ div.site-slogan {
 	color: #1d7893;
 }
 .fg-lannister {
-	color: #f02618;
+	color: #f04a18;
 }
 .fg-tyrell {
 	color: #509f16;
