users cannot publish invalid decks

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -14,7 +14,7 @@
 	    <div class="col-md-12">
 	        <h1 style="border-bottom:1px solid lightgray">{{ deck.name }}</h1>
 	        {% if deck.problem %}
-	        <div class="alert alert-danger" role="alert">{{ deck.message }}</div>
+	        <div class="alert alert-danger" role="alert">{{ deck.problem_label }}</div>
 	        {% endif %}
 	    </div>
 	</div>
